fix title wrapping

--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ body {
 .book__title {
   font-weight: 600;
   font-size: 16px;
+  width: 80%;
 }
 
 .book__year,
